welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:29: error: value % is not a member of java.awt.Color
  setCouleurBrosse(T(-1+q-2+d.toInt)%w)
                                    ^